crates/termist-tui/src/snapshots/termist_tui__ui__tests__a_follow_up_box_wraps_and_grows_with_its_lines.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 80, 20).backend()"
---
" termist   orbit-api ✓1●1                                                 12:00 "
"┏━━━━━━━━━━━━━━━━━━━━━━┓╭──────────────────────╮                                "
"┃● claude-1            ┃│✓ shell-2             │                                "
"┃claude · running      ┃│shell · done          │                                "
"┗━━━━━━━━━━━━━━━━━━━━━━┛╰──────────────────────╯                                "
"┌ claude-1 — claude ───────────────────────────────────────────────────────────┐"
"│hello                                                                         │"
"│   ┌ follow-up · claude-1 ────────────────────────────────────────────────┐   │"
"│   │the tests pass now, so look at the login redirect again and keep it   │   │"
"│   │short                                                                 │   │"
"│   │then commit                                                           │   │"
"│   │                                                                      │   │"
"│   └──────────────────────────────────────────────────────────────────────┘   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"Enter send to the agent · Alt+Enter newline · Esc cancel                        "
