crates/termist-tui/src/snapshots/termist_tui__ui__tests__a_quick_prompt_for_a_new_worktree.snap
---
source: crates/termist-tui/src/ui.rs
expression: t.backend_mut()
---
" termist   site                                                           12:00 "
"                                                                                "
" ⎇ main                                                                         "
"┏━━━━━━━━━━━━━━━━━━━━━━┓╭──────────────────────╮                                "
"┃● shell-1             ┃│● shell-3             │                                "
"┃she┌ new worktree ⎇ fix-the-login-redirect ───────────────────────────────┐    "
"┗━━━│fix the login redirect                                                │    "
"↓ 2 │                                                                      │    "
"    │                                                                      │    "
"┌ sh│                                                                      │───┐"
"│   │site ^P · ⎇ new ^N ^T · claude Tab · default ^O                       │   │"
"│   └──────────────────────────────────────────────────────────────────────┘   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"Enter start · Alt+Enter newline · ↑ history · Tab CLI · ^O model · ^P project · "
