crates/termist-tui/src/snapshots/termist_tui__ui__tests__ayna_branch.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 110, 16).backend()"
---
" termist diff   orbit-api ◆1✓1                                                                          12:00 "
" ⎇ fix-login · since origin/main · 3 files +5 −2 ●                                     unified · 1/3 reviewed "
"┌ files ──────────────────┐┌ src/auth.rs  M  +2 −1 ──────────────────────────────────────────────────────────┐"
"│ ▾ src/                  ││ @@ -10,3 +10,4 @@ fn login                                                      │"
"│   ↺ M auth.rs           ││ 10 10 │   let user = find(id);                                                  │"
"│   ✓ M login.rs          ││ 11    │ - let ok = check(user);                                                 │"
"│ ▾ tests/                ││    11 │ + let ok = check(&user);                                                │"
"│     A login.rs          ││    12 │ + log(&user);                                                           │"
"│                         ││ 12 13 │   ok                                                                    │"
"│                         ││                                                                                 │"
"│                         ││                                                                                 │"
"│                         ││                                                                                 │"
"│                         ││                                                                                 │"
"│                         ││                                                                                 │"
"└─────────────────────────┘└─────────────────────────────────────────────────────────────────────────────────┘"
"Tab panel · J/K file · {/} hunk · u uncommitted · ^R reviewed · R reload · s split · Esc back                 "
