crates/termist-tui/src/snapshots/termist_tui__ui__tests__bands_above_the_pane.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 80, 24).backend()"
---
" termist   site                                                           12:00 "
"                                                                                "
" ⎇ main                                                                         "
"┏━━━━━━━━━━━━━━━━━━━━━━┓╭──────────────────────╮                                "
"┃● shell-1             ┃│● shell-3             │                                "
"┃shell · ready         ┃│shell · ready         │                                "
"┗━━━━━━━━━━━━━━━━━━━━━━┛╰──────────────────────╯                                "
"↓ 2 more                                                                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌ shell-1 — shell ─────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"? help · p new task · Space follow-up · / sessions · n agent · t shell · Enter f"
