crates/termist-tui/src/snapshots/termist_tui__ui__tests__bands_beside_the_pane.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 190, 22).backend()"
---
" termist   site                                                                                                                                                                         12:00 "
" ⎇ main                 ┌ shell-1 — shell ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"┏━━━━━━━━━━━━━━━━━━━━━━┓│                                                                                                                                                                    │"
"┃● shell-1             ┃│                                                                                                                                                                    │"
"┃shell · ready         ┃│                                                                                                                                                                    │"
"┗━━━━━━━━━━━━━━━━━━━━━━┛│                                                                                                                                                                    │"
"╭──────────────────────╮│                                                                                                                                                                    │"
"│● shell-3             ││                                                                                                                                                                    │"
"│shell · ready         ││                                                                                                                                                                    │"
"╰──────────────────────╯│                                                                                                                                                                    │"
" ⎇ fix/login · #212 … ✓ │                                                                                                                                                                    │"
"╭──────────────────────╮│                                                                                                                                                                    │"
"│● shell-2             ││                                                                                                                                                                    │"
"│shell · ready         ││                                                                                                                                                                    │"
"╰──────────────────────╯│                                                                                                                                                                    │"
" ⎇ old (gone)           │                                                                                                                                                                    │"
"╭──────────────────────╮│                                                                                                                                                                    │"
"│● shell-4             ││                                                                                                                                                                    │"
"│shell · ready         ││                                                                                                                                                                    │"
"╰──────────────────────╯│                                                                                                                                                                    │"
"                        └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"? help · p new task · Space follow-up · / sessions · n agent · t shell · Enter focus · . next● · o open · x close tab · r rename · a archive · A archived · v pull requests · d kill · q quit "
