crates/termist-tui/src/snapshots/termist_tui__ui__tests__bands_with_what_their_branch_changed_and_one_with_no_cards.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 100, 50).backend()"
---
" termist   site                                                                               12:00 "
" ⎇ main                                                                                             "
"┏━━━━━━━━━━━━━━━━━━━━━━┓╭──────────────────────╮                                                    "
"┃● shell-1             ┃│● shell-3             │                                                    "
"┃shell · ready         ┃│shell · ready         │                                                    "
"┗━━━━━━━━━━━━━━━━━━━━━━┛╰──────────────────────╯                                                    "
" ⎇ fix/login · 3 files +60 −28 ● · #212 Login redirect loses the query string ✓                     "
"╭──────────────────────╮                                                                            "
"│● shell-2             │                                                                            "
"│shell · ready         │                                                                            "
"╰──────────────────────╯                                                                            "
" ⎇ old (gone)                                                                                       "
"╭──────────────────────╮                                                                            "
"│● shell-4             │                                                                            "
"│shell · ready         │                                                                            "
"╰──────────────────────╯                                                                            "
" ⎇ docs · #198 merged · X remove                                                                    "
"┌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┐                                                                            "
"╎no cards              ╎                                                                            "
"╎n agent · t shell     ╎                                                                            "
"└╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┘                                                                            "
"┌ shell-1 — shell ─────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"? help · p new task · Space follow-up · / sessions · n agent · t shell · Enter focus · . next● · o o"
