crates/termist-tui/src/snapshots/termist_tui__ui__tests__cards_that_do_not_fit_are_counted_above_and_below.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 60, 16).backend()"
---
" termist   orbit-api ◆1✓6                                   "
"↑ 4 more                                                    "
"┏━━━━━━━━━━━━━━━━━━━━━━┓╭──────────────────────╮            "
"┃✓ shell-5             ┃│✓ shell-6             │            "
"┃shell · done          ┃│shell · done          │            "
"┗━━━━━━━━━━━━━━━━━━━━━━┛╰──────────────────────╯            "
"↓ 1 more                                                    "
"                                                            "
"┌ shell-5 — shell ─────────────────────────────────────────┐"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"p new task · Space follow-up · / sessions · n agent · t shel"
