crates/termist-tui/src/snapshots/termist_tui__ui__tests__compose_line.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 90, 20).backend()"
---
" termist pull requests   orbit-api ◆1✓1⇄1                                           12:00 "
" Add a dealer filter to search                                                            "
" bob wants to merge feat into main · +184 −32 · 9 files · opened 1d ago                   "
" ◇ your review · ✓ checks · +184 −32 · 9 files                                            "
"  Overvie┌ comment on DealerFilter.tsx:40–42 · to your review ──────────────────┐         "
"─────────│   40 + useEffect(() => fetchAll(), []);                              │─────────"
" Adds a d│   41 + const label = sel ?? 'All';                                   │         "
"         │   42 +     return label;                                             │         "
" Closes #│──────────────────────────────────────────────────────────────────────│         "
"         │This refetches on every mount, can we memoize?                        │         "
"         │                                                                      │         "
"         │                                                                      │         "
"         │                                                                      │         "
"         │Enter add · Alt+Enter new line · C-s suggestion · Esc keep            │         "
"         └──────────────────────────────────────────────────────────────────────┘         "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"Enter send · Alt+Enter new line · Esc keep the draft                                      "
