crates/termist-tui/src/snapshots/termist_tui__ui__tests__empty_project_explains_what_to_do.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 60, 10).backend()"
---
" termist   web                                              "
"No sessions yet.  p: new task  ·  n: agent  ·  t: shell     "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"p new task · Space follow-up · / sessions · n agent · t shel"
